# rust-reproduction-issue-61963

./: shell.nix
attribute-crate/: Cargo.toml
attribute-crate/src/: lib.rs
derive-crate/: Cargo.toml
derive-crate/src/: lib.rs
repro-crate/: Cargo.toml
repro-crate/src/: main.rs
