[package]
name = "attribute-crate"
version = "0.1.0"
authors = ["David Wood <git@david.davidtw.co>"]
edition = "2015"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quote = "=0.6.3"
syn = { version = "=0.15.34", features = ["full"] }

[lib]
proc-macro = true
