[package]
name = "repro-crate"
version = "0.1.0"
authors = ["David Wood <git@david.davidtw.co>"]
edition = "2015"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive-crate = { path = "../derive-crate" }
attribute-crate = { path = "../attribute-crate" }
